# cool_gl

./: .gitignore  CMakeLists.txt  Elemento.hpp  ListaEnc.hpp  README.md  main.cpp
cool/: CMakeLists.txt  cool_app.cpp  cool_app.h  cool_app_window_design.glade  cool_glade.glade  main.cpp  main_window.cpp  main_window.h  model_columns.h
cool/data/: cool_app_window_design.glade
cool/src/: cool_app.cpp  cool_app.h  model_columns.h
cool_gl/: CMakeLists.txt
cool_gl/include/cool_gl/: Curve.h  Line.h  Matrix.h  Point.h  Polygon.h  Vec.h  WavefrontObj.h  cool_gl.h
cool_gl/src/: Curve.cpp  Drawable.cpp  Line.cpp  Matrix.cpp  Point.cpp  Polygon.cpp  Vec.cpp  WavefrontObj.cpp  Window.cpp  clipping.cpp  clipping.h
cool_gl/test/: CMakeLists.txt  main.cpp
libcool_gl/: CMakeLists.txt
libcool_gl/include/cool_gl/: Colour.h  Drawable.h  Line.h  Matrix.h  Point.h  Polygon.h  Vec.h  Window.h  cool_gl.h
libcool_gl/src/: Drawable.cpp  Line.cpp  Matrix.cpp  Point.cpp  Polygon.cpp  Vec.cpp  Window.cpp  cool_gl.cpp  hello.cpp
libcool_gl/test/: CMakeLists.txt  test.cpp
vk_cool/: CMakeLists.txt
vk_cool/src/: main.cpp
vpl/: make.sh  to_vpl.sh
